# base_repo_template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manage.py  pyproject.toml  run
.claude/rules/: testing.md
.claude/skills/: project-standards.md
.github/actions/notify/: action.yml
.github/workflows/: ci.yml
tests/: test_smoke.py
virtual_card_table/: asgi.py  settings.py  urls.py  wsgi.py
